@@ -1732,6 +1732,14 @@ class Fn : precompile {
                 $index++;
                 $specifier = "lu";
               }
+              elsif ($format->[$index] == 'x') {
+                $index++;
+                $specifier = "lx";
+              }
+              elsif ($format->[$index] == 'X') {
+                $index++;
+                $specifier = "lX";
+              }
             }
             break;
           }
@@ -1811,6 +1819,16 @@ class Fn : precompile {
           
           &_push_formatted_string_unsigned($buffer, $formatted_value, $width, $pad_char, $left_justified);
         }
+        elsif ($specifier eq "lx" || $specifier eq "lX") {
+          my $arg = (Long)$args->[$arg_count];
+          my $formatted_value = &_native_snprintf_lx($arg);
+
+          if ($specifier eq "lX") {
+            $formatted_value = Fn->uc($formatted_value);
+          }
+          
+          &_push_formatted_string_unsigned($buffer, $formatted_value, $width, $pad_char, $left_justified);
+        }
         else {
           die "Invalid specifier \"%$specifier\"";
         }
@@ -1836,6 +1854,7 @@ class Fn : precompile {
   native static method _native_snprintf_lu : string ($value : long);
   native static method _native_snprintf_u : string ($value : int);
   native static method _native_snprintf_x : string ($value : int);
+  native static method _native_snprintf_lx : string ($value : long);
   
   static method _push_formatted_string_unsigned : void($buffer : StringBuffer, $formatted_value : string, $width : int, $pad_char : byte, $left_justified : int) {
     
